--- a/CONTATO IOKIO/contato.css
+++ b/CONTATO IOKIO/contato.css
@@ -1,5 +1,5 @@
 header{
-    background-image: linear-gradient(to right, rgb(136, 164, 154), rgb(7, 38, 18));
+    background-image: linear-gradient(to right, rgb(161, 202, 188), rgb(7, 38, 18));
     padding: 20px;
 }
 
@@ -15,9 +15,37 @@ header{
     transform: translate(-30%, -15%);
     font-size: 50px;
     color: white;
+    color: rgb(255, 255, 255);
+    text-shadow: 
+            
+            -1px -1px 0px rgb(255, 255, 255),
+            -1px  4px 0px rgb(65, 173, 76),
+            1px -1px 0px rgb(61, 179, 87),
+            1px 0px 0px rgb(255, 255, 255);
+}
 
+nav{
+    position: absolute;
+    top: 180px;
+    right: 50px
     
 }
+
+nav li{
+    display: inline;
+    margin: 0 0 0 15px;
+}
+
+nav a{
+    text-transform: uppercase;
+    color: white;
+    font-size: 20px;
+    text-decoration: none;
+    font-family: 'Ananda', sem serifa;
+}
+
+
+
 
 main{
     width: 940px;
@@ -25,7 +53,9 @@ main{
 }
 
 form{
-    margin: 40px 0 ;/*margem superior e inferior de 40px, para os lados 0*/
+    margin: 40px ;/*margem superior e inferior de 40px, para os lados 0*/
+    margin-left: 100px;
+    
 }
 
 form label, form p{
@@ -40,6 +70,11 @@ form label, form p{
     display: block;
     margin: 0 0 20px;/*para baixo*/
     padding: 10px 25px; /*largura dos meus inputs*/
+    text-align: center;
+}
+
+input::placeholder{
+    color: rgb(25, 93, 25);
     
 }
 
@@ -49,20 +84,23 @@ form label, form p{
 }
 
 .enviar{
-    width: 350px;
+    width: 250px;
     padding: 15px 0;
     background-color: rgb(17, 75, 56);
     color: white;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 15px;
     border: none;
     border-radius: 5px;
     transition: 1.0s all;
     cursor: pointer;
+    margin-left: 300px;
+    
+
 }
 
 .enviar:hover{
-    background:rgb(17, 75, 56) ;
+    background:rgb(28, 45, 39) ;
     transform: scale(1.2);
 }
 
@@ -87,9 +125,18 @@ footer{
 
 fieldset{
     background-color: rgba(28, 45, 36, 0.779);
-    border-radius: 10px;
+    border-radius: 20px;
+    border: none;
     
 }
+
+
+    
+
+#logo1{
+    border-radius: 10px;
+}
+
 
 
 
